<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.QuestionFragment"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textView_q3_1"
        android:layout_width="340dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/question3_1"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/button_option_1_q3_1"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/selection"
        android:gravity="center"
        android:text="@string/question3_1_select1"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/button_option_2_q3_1"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/selection"
        android:gravity="center"
        android:text="@string/question3_1_select2"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_option_1_q3_1" />

    <TextView
        android:id="@+id/button_option_3_q3_1"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/selection"
        android:gravity="center"
        android:text="@string/question3_1_select3"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_option_2_q3_1" />

    <TextView
        android:id="@+id/button_option_4_q3_1"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@drawable/selection"
        android:gravity="center"
        android:text="@string/question3_1_select4"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_option_3_q3_1" />

    <TextView
        android:id="@+id/button_option_5_q3_1"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@drawable/selection"
        android:gravity="center"
        android:text="@string/question3_1_select5"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_option_4_q3_1" />

    <TextView
        android:id="@+id/button_option_6_q3_1"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@drawable/selection"
        android:gravity="center"
        android:text="@string/question3_1_select6"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_option_5_q3_1" />

    <ImageView
        android:id="@+id/button_back_q3_1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>